// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderLogo is rendered 1`] = `
<a
  aria-label="aria-label"
  class="euiHeaderLogo testClass1 testClass2"
  data-test-subj="test subject string"
  rel="noreferrer"
>
  <div
    aria-label="Elastic"
    class="euiHeaderLogo__icon"
    data-euiicon-type="logoElastic"
  />
</a>
`;

exports[`EuiHeaderLogo renders href 1`] = `
<a
  class="euiHeaderLogo"
  href="#"
  rel="noreferrer"
>
  <div
    aria-label="Elastic"
    class="euiHeaderLogo__icon"
    data-euiicon-type="logoElastic"
  />
</a>
`;

exports[`EuiHeaderLogo renders href with rel 1`] = `
<a
  class="euiHeaderLogo"
  href="#"
  rel="noreferrer"
>
  <div
    aria-label="Elastic"
    class="euiHeaderLogo__icon"
    data-euiicon-type="logoElastic"
  />
</a>
`;

exports[`EuiHeaderLogo renders optional props 1`] = `
<a
  class="euiHeaderLogo"
  rel="noreferrer"
  style="color:red"
>
  <div
    aria-label="Moby Dick"
    class="euiHeaderLogo__icon"
    data-euiicon-type="alert"
  />
</a>
`;
